# GooglePhotosMCP

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
prompts/: README.md
src/google_photos_mcp/: __init__.py  auth.py  photos_client.py  server.py
